# mttr

./: Justfile  mttr.ipynb  power-law.ipynb  pyproject.toml
